--- a/index.Rmd
+++ b/index.Rmd
@@ -24,7 +24,7 @@ This is the website of Mathematical Foundations. We create this website  to
 
 - Answer the important questions raised by students.
 
-- Clarify the possible confusion due to language.
+- Clarify possible confusions due to language.
 
 **To get the most of mathematics, you should practice as much as possible.**
 
