--- a/99-solutions.Rmd
+++ b/99-solutions.Rmd
@@ -4,6 +4,15 @@
 knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
 ```
 
+
+# Chapter 3 {- #s3}
+
+## Multiple choice questions {- #mq3}
+
+
+### Question 1 {- #mq3.1}
+
+
 # Chapter 2 {- #s2}
 
 ## Multiple choice questions {- #mq2}
