--- a/01-summary.Rmd
+++ b/01-summary.Rmd
@@ -236,6 +236,8 @@ $$\sum_{i=1}^n ar^{i-1}=a\left(\frac{r^n-1}{r-1}\right)$$
 
 - **Tangent** A line that just touches a curve at a point.
 
+- **Chord** A straight line joining two points on a curve.
+
 - **Notations**
 
 $$f'(x),\frac{dy}{dx}$$
@@ -253,6 +255,29 @@ $$f'(x),\frac{dy}{dx}$$
 - **Concave** Graph bends downwards when $f''(x)<0$.
 
 - **Convex** Graph bends upwards when $f''(x)>0$.
+
+#### Marginal functions in economics
+
+- **Marginal revenue** The extra revenue gained by selling 1 more unit of a good. $MR = \frac{d TR}{dQ}$.
+
+- **Average revenue** Total revenue per unit of output. Average revenue curve and demand curve are synonymous.
+
+- **Marginal cost** The cost of producing 1 more unit of output. $MC=\frac{dTC}{dQ}$.
+
+- **Marginal product of labor** The extra output produced by 1 more unit of labor. $MP_L=\frac{dQ}{dL}$.
+
+- **Marginal propensity to consume** The fraction of a rise in national income which goes into consumption. $MPC=\frac{dC}{dY}$.
+
+- **Marginal propensity to save** The fraction of a rise in national income which goes into savings. $MPS=\frac{dS}{dY}$.
+
+- **Monopolist** The only firm in the industry.
+
+- **Perfect competition** A situation in which there are no barries to entry in an industry where there are many firms selling an identical product at the market price.
+
+- **Law of diminishing marginal productivity (Law of diminishing returns)** Once the size of the workforce exceeds a particular value, the increase in output due to 1-unit increase in labor will decline. $\frac{d^2Q}{dL^2}<0$ for sufficiently large $L$.
+
+
+
 
 
 
