--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ This website is maintained by <u>Guangyuan Gao</u> and <u>Yan Cai</u>. If you ha
 
 ## 🖊️ Homework {-}
 
-❗ Homework: Exercise 4.1* (page 278), Q3; Exercise 4.2* (page 288), Q1,4,6;  Exercise 4.3* (page 302), Q1,4,7,9 are due on **2020/11/03 (18:00 Beijing Time)**. 
+❗ Homework: Exercise 4.4* (page 313), Q4, 7, 8; Exercise 4.5* (page 327), Q2, 4, 8; Exercise 4.6* (page 347), Q2, 5, 6, 7, 8 are due on **2020/Nov/10 (18:00 Beijing Time)**. 
 
 You should send either a typed document or a scanned/photoed handwritten manuscript to the tutor's email address <2017201678@ruc.edu.cn>. You should show the **calculation/proof details** in your submitted document.
 
