--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ This website is maintained by <u>Guangyuan Gao</u> and <u>Yan Cai</u>. If you ha
 
 ## 🖊️ Homework {-}
 
-Homework: Exercise 4.7* (page 359) Q5, Q6, Exercise 4.8* (page 371) Q2, Q5, Q8, Q12, Q13 are due on **2020/Nov/24 (18:00 Beijing Time)**. By 2020/Nov/24 you should read this chapter at least one time.
+Homework: Exercise 5.1* (page 402) Q2, Q4, Q12, Exercise 5.2* (page 418) Q4, Q5, Q6, Q9, Q11 are due on **2020/Dec/01 (18:00 Beijing Time)**. 
 
 You should send either a typed document or a scanned/photoed handwritten manuscript to the tutor's email address <2017201678@ruc.edu.cn>. You should show the **calculation/proof details** in your submitted document.
 
